# CryptoApp-CORE

./: .gitignore  LICENSE  README.md  _linked_lists.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  transactions.py  utils.py
.github/workflows/: tests.yml
inc/: _linked_lists.py
src/crypto_app_core/: auth.py  transactions.py  utils.py
src/crypto_app_core/lib/: _threads.py
tests/: _test.py  conftest.py  test.py  test2.py  test_au.py  test_ts.py
