[metadata]
name = crypto_app_core
description = A core for any cryptocurrency or blockchain related apps
author = Fridella
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    crypto_app_core
install_requires =
    attrs>=21
    coloredlogs>=15
    cryptography>=37
    pymerkle>=3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
