[metadata]
name = crypto_app_core
description = A core for any cryptocurrency or blockchain related apps
author = Fridella
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9 :: Only
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    crypto_app_core
install_requires =
    attrs>=21
    coloredlogs>=15
    cryptography>=37
    pymerkle>=3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
crypto_app_core = py.typed

[flake8]
max-line-length = 160